# cat-or-roll

./: .gitignore  README.md  pyproject.toml
model/: classifier.pth
src/cat_or_roll/: __main__.py
src/cat_or_roll/classifier/: abc.py
src/cat_or_roll/classifier/impl/: classifier.py
src/cat_or_roll/service/: configuration.py
src/cat_or_roll/service/routers/: classify.py
src/cat_or_roll/templates/: index.html
